--- a/templates/agenda/event/includes/event_card.html
+++ b/templates/agenda/event/includes/event_card.html
@@ -64,15 +64,23 @@
 {% endblock %}
 
 {% block btn %}
-    {% if object.prices.all.0|floatformat != '0' and object.prices.all|length > 0 %}
-        {% if not object.is_full %}
-            {% for price in object.prices.all %}
-                {% if forloop.first %}
-                    <div class="article-box__btn">
+    {% with object.prices.all as prices %}
+        {% if prices|length > 0 and not object.is_full %}
+            <div class="article-box__btn">
+                {% if not object.external_id %}
+                    {% with object.links.all as links %}
+                        {% if links %}
+                            <object>
+                                <a class="button button--small mr0" href="{{ links|get_type_link:'link'|first }}">
+                                    {% trans "Reserve" %}
+                                </a>
+                            </object>
+                        {% endif %}
+                    {% endwith %}
+                {% else %}
                         <object><a href="{% url 'event_booking' content.content_object.slug %}" class="button button--small mr0">{% trans "Reserve" %}</a></object>
-                    </div>
                 {% endif %}
-            {% endfor %}
+            </div>
         {% endif %}
-    {% endif %}
+    {% endwith %}
 {% endblock %}
