--- a/templates/agenda/event_list.html
+++ b/templates/agenda/event_list.html
@@ -26,7 +26,7 @@
 {% endblock %}
 
 {% block breadcrumb_menu %}
-    {{ block.super }}
+    {% page_menu "pages/menus/breadcrumb_event.html" %}
 {% endblock %}
 
 {% block main %}
