--- a/templates/agenda/includes/event_search.html
+++ b/templates/agenda/includes/event_search.html
@@ -11,15 +11,7 @@
     <div class="search-box__subtitle">
         {% include 'agenda/includes/event_date_line.html' with object=event %}
         {% if event.prices.all|length > 0 and not is_archive and not event.is_full %}
-            {% if not event.external_id %}
-                {% with event.links.all as links %}
-                    {% if links %}
-                        <a class="button button--small ml1 event__meta__btn" href="{{ links|get_type_link:'link'|first }}">
-                            {% trans "Reserve" %}
-                        </a>
-                    {% endif %}
-                {% endwith %}
-            {% else %}
+            {% if event.external_id %}
                 <a class="button button--small ml1 event__meta__btn" href="{% url 'event_booking' event.slug %}">
                     {% trans "Reserve" %}
                 </a>
