--- a/templates/projects/inc/project_list.html
+++ b/templates/projects/inc/project_list.html
@@ -1,5 +1,6 @@
 <div class="row">
     {% for project in projects %}
+        {% if not project.is_archive %}
         <div class="col-sm-6">
             <h3 class="mt0 mb0">
                 <a href="{% url 'organization-project-detail' project.slug %}">
@@ -10,5 +11,6 @@
                 {{ project.description }}
             </p>
         </div>
+        {% endif %}
     {% endfor %}
 </div>
