--- a/templates/pages/departmentpage.html
+++ b/templates/pages/departmentpage.html
@@ -61,3 +61,9 @@
       {% include "core/inc/block.html" %}
     {% endwith %}
 {% endblock %}
+
+{% block page_related_content %}
+    {% with page.departmentpage.department|get_article_by_department as concrete_objects %}
+        {% include "core/inc/related_content_dynamic.html" %}
+    {% endwith %}
+{% endblock %}
