--- a/templates/magazine/brief/brief_list.html
+++ b/templates/magazine/brief/brief_list.html
@@ -2,7 +2,7 @@
     <div class="col-xs-3">
         <div class="home__shutter-item">
             <h2>{{ brief.title }}</h2>
-            <p>{{ brief.description|truncatechars:100 }}</p>
+            <p>{{ brief.description|safe|truncatechars:100 }}</p>
             <a href="{{ brief.external_content }}" title="brief.title">{{ brief.text_button }}</a>
         </div>
     </div>
