--- a/templates/agenda/includes/event_search.html
+++ b/templates/agenda/includes/event_search.html
@@ -1,18 +1,14 @@
 {% extends "core/inc/search_card.html" %}
 {% load i18n future mezzanine_tags event_tags keyword_tags disqus_tags organization_tags %}
 
-{% block title %}
-    {{ event.title }}
-{% endblock %}
-
 {% block icon %}calendar-o{% endblock %}
 
 {% block subtitle %}
     <div class="search-box__subtitle">
-        {% include 'agenda/includes/event_date_line.html' with object=event %}
-        {% if event.prices.all|length > 0 and not is_archive and not event.is_full %}
-            {% if event.external_id %}
-                <a class="button button--small ml1 event__meta__btn" href="{% url 'event_booking' event.slug %}">
+        {% include 'agenda/includes/event_date_line.html' %}
+        {% if object.prices.all|length > 0 and not is_archive and not object.is_full %}
+            {% if object.external_id %}
+                <a class="button button--small ml1 event__meta__btn" href="{% url 'event_booking' object.slug %}">
                     {% trans "Reserve" %}
                 </a>
             {% endif %}
@@ -20,35 +16,13 @@
     </div>
 {% endblock %}
 
-{% block image %}
-    {% with event.images.all|get_type:'card' as images %}
-        {% if images %}
-        <a href="{{ event.get_absolute_url }}" class="search-box__image-wrapper">
-            <figure class="search-box__image">
-                <img class="lazyload" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-original="{{ MEDIA_URL }}{% thumbnail images.0.file 720 435 %}">
-            </figure>
-        </a>
-        {% else %}
-            {% with event.images.all|get_type:'card' as images %}
-                {% if images %}
-                <a href="{{ event.get_absolute_url }}" class="search-box__image-wrapper">
-                    <figure class="search-box__image">
-                        <img class="lazyload" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-original="{{ MEDIA_URL }}{% thumbnail images.0.file 720 435 %}">
-                    </figure>
-                </a>
-                {% endif %}
-            {% endwith %}
-        {% endif %}
-    {% endwith %}
-{% endblock %}
-
 {% block tags %}
     {% keywords_for event as tags %}
-    {% if event.departments.all.0 or tags %}
-        {% if event.departments.all.0 %}
+    {% if object.departments.all.0 or tags %}
+        {% if object.departments.all.0 %}
             <div class="event-line-box__tags">
                 <div class="tag tag--small dashed">
-                  {{ event.departments.all.0.department.name }}
+                  {{ object.departments.all.0.department.name }}
                 </div>
             </div>
         {% endif %}
@@ -56,9 +30,5 @@
 {% endblock %}
 
 {% block url %}
-    {{ event.get_absolute_url }}
-{% endblock %}
-
-{% block content %}
-    {{ event.description|slice:":100" }}
+    {{ object.get_absolute_url }}
 {% endblock %}
