--- a/templates/media/inc/playlist_search.html
+++ b/templates/media/inc/playlist_search.html
@@ -1,49 +1,39 @@
 {% extends "core/inc/search_card.html" %}
 {% load i18n mezzanine_tags organization_tags %}
 
-{% block title %}
-    {{ result }}
-{% endblock %}
-
-{% block icon %}file-{{playlist.type}}-o{% endblock %}
+{% block icon %}file-{{object.type}}-o{% endblock %}
 
 {% block tags %}
     <div class="event-line-box__tags">
         <div class="tag tag--small dashed dashed--gray">
-            {{playlist.type}}
+            {{object.type}}
         </div>
     </div>
 {% endblock %}
 
 {% block url %}
-    {{ playlist.get_absolute_url }}
+    {{ object.get_absolute_url }}
 {% endblock %}
 
-{% block content %}
-    {% if playlist.description != playlist|stringformat:"s" %}
-        {{ playlist.description|truncatewords_html:200|safe }}
-    {% endif %}
-{% endblock %}
-
-{% with playlist.get_absolute_url as playlist_url %}
-    {% if playlist.medias.first.media.poster_url %}
+{% with object.get_absolute_url as playlist_url %}
+    {% if object.medias.first.media.poster_url %}
         <!-- url of the media is distant. We can't generate back side thumbnail. Do it with css pliz -->
-        <img src="{{playlist.medias.first.media.poster_url }}" width="200" height="150">
+        <img src="{{object.medias.first.media.poster_url }}" width="200" height="150">
     {% else %}
         <!--placeholder picture-->
     {% endif %}
 
-    {{ playlist.type }}
+    {{ object.type }}
 
     <h5>
         {% if playlist_url %}
-            <a href="{{ playlist_url }}">{{ playlist.title }}</a>
+            <a href="{{ playlist_url }}">{{ object.title }}</a>
         {% else %}
             {{ playlist }}
         {% endif %}
     </h5>
-    {% if playlist.description != playlist|stringformat:"s" %}
-        <p>{{ playlist.description|truncatewords_html:200|safe }}</p>
+    {% if object.description != playlist|stringformat:"s" %}
+        <p>{{ object.description|truncatewords_html:200|safe }}</p>
     {% endif %}
     {% if playlist_url %}
         <a href="{{ playlist_url }}">{% trans "read more" %}</a>
@@ -52,10 +42,10 @@
 {% endwith %}
 
 {% block image %}
-    {% if playlist.medias.all.0.media.poster_url %}
-        <a href="{{ playlist.get_absolute_url }}" class="search-box__image-wrapper">
-            <figure class="search-box__image search-box__image--playlist search-box__image--{{playlist.type}}">
-                <img class="lazyload" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-original="{{ playlist.medias.all.0.media.poster_url }}">
+    {% if object.medias.all.0.media.poster_url %}
+        <a href="{{ object.get_absolute_url }}" class="search-box__image-wrapper">
+            <figure class="search-box__image search-box__image--playlist search-box__image--{{object.type}}">
+                <img class="lazyload" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-original="{{ object.medias.all.0.media.poster_url }}">
             </figure>
         </a>
     {% endif %}
