--- a/templates/pages/page/includes/page_search.html
+++ b/templates/pages/page/includes/page_search.html
@@ -1,36 +1,26 @@
 {% extends "core/inc/search_card.html" %}
 {% load i18n mezzanine_tags organization_tags %}
 
-{% block title %}
-    {{ result.title }}
-{% endblock %}
-
 {% block icon %}files-o{% endblock %}
 
 {% block tags %}
-    {% with page.get_ascendants|last as top_level_parent %}
+    {% with object.get_ascendants|last as top_level_parent %}
         {% if top_level_parent.get_content_model.title %}
             <div class="event-line-box__tags">
                 <div class="tag tag--small dashed">
                     {{ top_level_parent.get_content_model.title }}
                 </div>
             </div>
-        {% elif page.departmentpage %}
+        {% elif object.departmentpage %}
             <div class="event-line-box__tags">
                 <div class="tag tag--small dashed">
-                    {{ page.departmentpage.title }}
+                    {{ object.departmentpage.title }}
                 </div>
             </div>
-        {% elif page|classname == "Project"  %}
+        {% elif object|classname == "Project"  %}
             <div class="event-line-box__tags">
                 <div class="tag tag--small dashed">
                     {% trans 'Project' %}
-                </div>
-            </div>
-        {% elif page|classname == "Article"  %}
-            <div class="event-line-box__tags">
-                <div class="tag tag--small dashed">
-                    {% trans 'Article' %}
                 </div>
             </div>
         {% else %}
@@ -44,11 +34,5 @@
 {% endblock %}
 
 {% block url %}
-    {{ page.get_absolute_url }}
-{% endblock %}
-
-{% block content %}
-    {% if result.description != result|stringformat:"s" %}
-        {{ result.description|truncatewords_html:200|safe }}
-    {% endif %}
+    {{ object.get_absolute_url }}
 {% endblock %}
