--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -66,7 +66,7 @@
                     {% endfor %}
                     <p>
                         {% if results.paginator.count == 0 %}
-                        {% blocktrans %}No results were found matching your query: {{ query }}{% endblocktrans %}
+                        {% blocktrans %}No results were found matching your query.{% endblocktrans %}
                         {% endif %}
                     </p>
                 </div>
