--- a/themes/vertigo_starts_eu/templates/network/organization_producer_create.html
+++ b/themes/vertigo_starts_eu/templates/network/organization_producer_create.html
@@ -193,7 +193,7 @@
           </div>
           <div class="form-actions" style="display:block;float:center;margin-left:30px;margin-right:30px;">
               <div style="text-align:center;padding-bottom:20px;">
-                <input class="ict-project-style__button-submit" type="submit" style="background:#50E3C2;color:white;margin-top:20px"
+                <input class="ict-project-style__button-submit" type="submit" style="background:#50E3C2;color:white;margin-top:20px;padding-top:5px;padding-bottom:5px;"
                     value="{% if page.form.button_text %}{{ page.form.button_text }}{% else %}{% trans "Save" %}{% endif %}">
               </div>
           </div>
