--- a/themes/vertigo_starts_eu/templates/network/organization_producer_create.html
+++ b/themes/vertigo_starts_eu/templates/network/organization_producer_create.html
@@ -164,7 +164,7 @@
                     <p class="ict-project-style__field-style select_style {% if form.country.errors %}error_field_style{% endif %}">{{ form.country }}</p>
                 </div>
             </div>
-            <div style="float:left;width:100%;height:10px;"></div>
+            <div style="float:left;width:100%;height:10px"></div>
           </div>
           <div id="divider-1" class="ict-project-style__divider-section" onclick="showHideDivider(this, event);">
             <span class="ict-project-style__divider-title-section">
@@ -174,7 +174,7 @@
           </div>
           <div id="field-form-1" style="margin-left:30px;margin-right:30px">
             <div style="display:block">
-                <div style="float:left;width:48%;margin-right:40px;">
+                <div style="float:left;width:48%;margin-right:40px">
                     <p class="ict-project-style__title-field" {% if inlines.0.0.producer_description.errors %}style="color:red;"{% endif %}>{{ inlines.0.0.producer_description.label }}</p>
                     <i class="fa fa-lock ict-project-style__icon-field" aria-hidden="true" {% if inlines.0.0.producer_description.errors %}style="color:red;"{% endif %}></i>
                     <p class="ict-project-style__description-field" {% if inlines.0.0.producer_description.errors %}style="color:red"{% endif %}>{{ inlines.0.0.producer_description.help_text }}</p>
@@ -191,7 +191,7 @@
             </div>
             <div style="float:left;width:100%;height:10px;"></div>
           </div>
-          <div class="form-actions" style="display:block;float:center;margin-left:30px;margin-right:30px;">
+          <div class="form-actions" style="display:block;float:center;margin-left:30px;margin-right:30px;margin-top:10px;">
               <div style="text-align:center;padding-bottom:20px;">
                 <input class="ict-project-style__button-submit" type="submit" style="background:#50E3C2;color:white;margin-top:20px;padding-top:5px;padding-bottom:5px;"
                     value="{% if page.form.button_text %}{{ page.form.button_text }}{% else %}{% trans "Save" %}{% endif %}">
