--- a/themes/vertigo_starts_eu/static/vertigo_starts_eu/src/sass/modules/_accounts-pages.scss
+++ b/themes/vertigo_starts_eu/static/vertigo_starts_eu/src/sass/modules/_accounts-pages.scss
@@ -56,6 +56,7 @@ $module: ".accounts-pages";
     background-color:clear;
     display:inline-block;
     color:black;
+    line-height: 50px;
   }
 
   &__right-element-item {
@@ -66,6 +67,7 @@ $module: ".accounts-pages";
     background-color: clear;
     display: inline-block;
     text-align: right;
+    line-height: 50px;
   }
 
   &__button-link-enable {
