[VERTIGO] Menor review style forms producer

--- a/themes/vertigo_starts_eu/static/vertigo_starts_eu/src/sass/modules/_accounts-pages.scss
+++ b/themes/vertigo_starts_eu/static/vertigo_starts_eu/src/sass/modules/_accounts-pages.scss
@@ -110,4 +110,12 @@ $module: ".accounts-pages";
     font-family:'Merriweather';
     font-weight: bold;
   }
+
+  &__wrapper-link {
+
+    width:130px;
+    height:95%;
+    float:right;
+    text-align:center;
+  }
 }
