--- a/themes/vertigo_starts_eu/templates/accounts/account_projects_list.html
+++ b/themes/vertigo_starts_eu/templates/accounts/account_projects_list.html
@@ -15,11 +15,13 @@
 					Project name: <b>{{ object.title }}</b>
 				</div>
 				<div class="accounts-pages__right-element-item">
-					{% if object.status == 1 %}
-						<a href="{{ object.url }}" class="accounts-pages__button-link-enable">Edit</a>
-					{% else %}
-						<a href="#" class="accounts-pages__button-link-disable">Disabled</a>
-					{% endif %}
+					<div class="accounts-pages__wrapper-link" style="background:{% if object.status == 1 %}#50E3C2{% else %}gray{% endif %}">
+						{% if object.status == 1 %}
+							<a href="{{ object.url }}" class="accounts-pages__button-link-enable">Edit</a>
+						{% else %}
+							<a href="#" class="accounts-pages__button-link-disable">Disabled</a>
+						{% endif %}
+					</div>
 				</div>
 			</div>
 		{% endfor %}
