--- a/templates/magazine/brief/brief_detail.html
+++ b/templates/magazine/brief/brief_detail.html
@@ -17,6 +17,6 @@
             </p>
 
         </a>
-        <a href="{{ brief.external_content}}" class="btn btn-full">{{ brief.text_button }}</a>
+        <a href="{{ brief.external_content}}" class="btn btn-full" target="_blank">{{ brief.text_button }}</a>
     </div>
 </div>
