--- a/templates/magazine/brief/brief_list.html
+++ b/templates/magazine/brief/brief_list.html
@@ -3,7 +3,7 @@
         <div class="home__shutter-item">
             <h2>{{ brief.title }}</h2>
             <p>{{ brief.description|safe|truncatechars:100 }}</p>
-            <a href="{{ brief.external_content }}" title="brief.title">{{ brief.text_button }}</a>
+            <a href="{{ brief.external_content }}" title="brief.title" target="_blank">{{ brief.text_button }}</a>
         </div>
     </div>
 {% endfor %}
